--- a/Part1/index.html
+++ b/Part1/index.html
@@ -11,6 +11,7 @@
         <h1>Tic Tac Toe Board!</h1>
       </nav>
       <main>
+        <h1></h1>
         <table>
         <tr class="row">
             <td id="0" onclick="play(0)"></td>
@@ -31,6 +32,8 @@
             <span>Player </span>
             <span id="player">X</span>
             <span>'s turn</span>
+            <button onClick="resetGame()">Reset</button>
       </main>
+      <script src='./index.js'></script>
   </body>
 </html>
