--- a/Part1/index.html
+++ b/Part1/index.html
@@ -7,33 +7,34 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-      <nav>
-        <h1>Tic Tac Toe Board!</h1>
-      </nav>
-      <main>
-        <h1></h1>
-        <table>
+    <nav>
+      <h1>Tic Tac Toe Board!</h1>
+    </nav>
+    <main>
+      <table>
         <tr class="row">
-            <td id="0" onclick="play(0)"></td>
-            <td id="1" onclick="play(1)"></td>
-            <td id="2" onclick="play(2)"></td>
+          <td id="0" onclick="play(0)"></td>
+          <td id="1" onclick="play(1)"></td>
+          <td id="2" onclick="play(2)"></td>
         </tr>
         <tr class="row">
-            <td id="3" onclick="play(3)"></td>
-            <td id="4" onclick="play(4)"></td>
-            <td id="5" onclick="play(5)"></td>
+          <td id="3" onclick="play(3)"></td>
+          <td id="4" onclick="play(4)"></td>
+          <td id="5" onclick="play(5)"></td>
         </tr>
         <tr class="row">
-            <td id="6" onclick="play(6)"></td>
-            <td id="7" onclick="play(7)"></td>
-            <td id="8" onclick="play(8)"></td>
+          <td id="6" onclick="play(6)"></td>
+          <td id="7" onclick="play(7)"></td>
+          <td id="8" onclick="play(8)"></td>
         </tr>
-        </table>
-            <span>Player </span>
-            <span id="player">X</span>
-            <span>'s turn</span>
-            <button onClick="resetGame()">Reset</button>
-      </main>
-      <script src='./index.js'></script>
+      </table>
+      <div class="player-container">
+        <h1 class="player">Player</h1>
+        <h1 class="player" id="player">X</h1>
+        <h1 class="player">'s turn</h1>
+      </div>
+      <button onclick="resetGame()">Reset</button>
+    </main>
+    <script src="./index.js"></script>
   </body>
 </html>
